modification des biens pour prendre en compte le nom arbitraire donné par le client